# axum-mongodb

./: .gitignore  Cargo.toml  LICENSE  README.md
core/: Cargo.toml  README.md
core/src/: column_meta.rs  lib.rs
core/src/column/: inject.rs  inject_meta.rs  mod.rs
core/src/indexes/: compound.rs  mod.rs  multikey.rs  single.rs
examples/: struct.rs
examples/axum/: Cargo.toml
examples/axum/src/: lib.rs  main.rs
examples/axum/src/todos/: controller.rs  mod.rs  server.rs
src/: lib.rs  mongodb_server.rs  server.rs  servers_warp.rs
