[package]
name = "axum-mongodb"
version = "0.1.1"
edition = "2021"
authors = ["yexiyue"]
keywords = ["axum", "macro", "mongodb"]
categories = ["axum", "database"]
repository = "https://github.com/yexiyue/axum-mongodb"
readme = "README.md"
license = "MIT"
description = "macro for axum with mongodb"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
axum-mongodb-core = { path = "core", version = "0.1.1" }
mongodb = "2.8.0"

[workspace]
members = ["core"]
