[package]
name = "axum-mongodb-core"
version = "0.2.0"
edition = "2021"
authors = ["yexiyue"]
keywords = ["axum", "macro", "mongodb"]
categories = ["axum", "database"]
repository = "https://github.com/yexiyue/axum-mongodb"
readme = "README.md"
license = "MIT"
description = "the core of axum-mongodb"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
once_cell = "1.19.0"
proc-macro2 = "1.0.71"
quote = "1.0.33"
syn = { version = "2.0.43", features = ["extra-traits", "full"] }

[lib]
proc-macro = true
